--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ body {
 .site-nav {
   display: flex;
   background-image: url(/images/cover.jpg);
+  background-size: cover;
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -55,9 +56,20 @@ body {
   padding: 0;
 }
 
+.main-social {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 5;
+}
+
 @media screen and (max-width: 48rem) {
+
   .site-nav,
   .main-menu {
+    flex-direction: row;
+  }
+  .main-social {
     flex-direction: row;
   }
 
